<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/t.5"
        android:background="@color/split_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/t0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clazz1"
            android:textSize="@dimen/t20"
            android:gravity="center"
            android:paddingTop="@dimen/t10"
            android:paddingBottom="@dimen/t10"/>
        <TextView
            android:layout_width="@dimen/t0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clazz2"
            android:textSize="@dimen/t20"
            android:gravity="center"
            android:paddingTop="@dimen/t10"
            android:paddingBottom="@dimen/t10"/>
        <TextView
            android:layout_width="@dimen/t0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clazz3"
            android:textSize="@dimen/t20"
            android:gravity="center"
            android:paddingTop="@dimen/t10"
            android:paddingBottom="@dimen/t10"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/t0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clazz4"
            android:textSize="@dimen/t20"
            android:gravity="center"
            android:paddingTop="@dimen/t10"
            android:paddingBottom="@dimen/t10"/>
        <TextView
            android:layout_width="@dimen/t0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clazz5"
            android:textSize="@dimen/t20"
            android:gravity="center"
            android:paddingTop="@dimen/t10"
            android:paddingBottom="@dimen/t10"/>
        <TextView
            android:layout_width="@dimen/t0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clazz6"
            android:textSize="@dimen/t20"
            android:gravity="center"
            android:paddingTop="@dimen/t10"
            android:paddingBottom="@dimen/t10"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/t0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clazz7"
            android:textSize="@dimen/t20"
            android:gravity="center"
            android:paddingTop="@dimen/t10"
            android:paddingBottom="@dimen/t10"/>
        <TextView
            android:layout_width="@dimen/t0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clazz8"
            android:textSize="@dimen/t20"
            android:gravity="center"
            android:paddingTop="@dimen/t10"
            android:paddingBottom="@dimen/t10"/>
        <TextView
            android:layout_width="@dimen/t0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/t20"
            android:gravity="center"
            android:paddingTop="@dimen/t10"
            android:paddingBottom="@dimen/t10"/>
    </LinearLayout>
</LinearLayout>