<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                android:textSize="@dimen/t18"
                android:layout_marginLeft="@dimen/t8"
                android:textColor="@color/text_color"
                android:layout_marginTop="@dimen/t12"
                android:layout_marginBottom="@dimen/t4"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/t.5"
                android:background="@color/split_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_xh"
                        android:layout_width="@dimen/t0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clazz1"
                        android:textSize="@dimen/t20"
                        android:gravity="center"
                        android:paddingTop="@dimen/t10"
                        android:paddingBottom="@dimen/t10"/>
                    <TextView
                        android:id="@+id/tv_kh"
                        android:layout_width="@dimen/t0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clazz2"
                        android:textSize="@dimen/t20"
                        android:gravity="center"
                        android:paddingTop="@dimen/t10"
                        android:paddingBottom="@dimen/t10"/>
                    <TextView
                        android:id="@+id/tv_wy"
                        android:layout_width="@dimen/t0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clazz3"
                        android:textSize="@dimen/t20"
                        android:gravity="center"
                        android:paddingTop="@dimen/t10"
                        android:paddingBottom="@dimen/t10"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_ls"
                        android:layout_width="@dimen/t0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clazz4"
                        android:textSize="@dimen/t20"
                        android:gravity="center"
                        android:paddingTop="@dimen/t10"
                        android:paddingBottom="@dimen/t10"/>
                    <TextView
                        android:id="@+id/tv_xz"
                        android:layout_width="@dimen/t0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clazz5"
                        android:textSize="@dimen/t20"
                        android:gravity="center"
                        android:paddingTop="@dimen/t10"
                        android:paddingBottom="@dimen/t10"/>
                    <TextView
                        android:id="@+id/tv_ds"
                        android:layout_width="@dimen/t0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clazz6"
                        android:textSize="@dimen/t20"
                        android:gravity="center"
                        android:paddingTop="@dimen/t10"
                        android:paddingBottom="@dimen/t10"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_kb"
                        android:layout_width="@dimen/t0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clazz7"
                        android:textSize="@dimen/t20"
                        android:gravity="center"
                        android:paddingTop="@dimen/t10"
                        android:paddingBottom="@dimen/t10"/>
                    <TextView
                        android:id="@+id/tv_other"
                        android:layout_width="@dimen/t0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clazz8"
                        android:textSize="@dimen/t20"
                        android:gravity="center"
                        android:paddingTop="@dimen/t10"
                        android:paddingBottom="@dimen/t10"/>
                    <TextView
                        android:layout_width="@dimen/t0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/t20"
                        android:gravity="center"
                        android:paddingTop="@dimen/t10"
                        android:paddingBottom="@dimen/t10"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community"
                android:textSize="@dimen/t18"
                android:layout_marginLeft="@dimen/t8"
                android:textColor="@color/text_color"
                android:layout_marginTop="@dimen/t12"
                android:layout_marginBottom="@dimen/t4"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/t.5"
                android:background="@color/split_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_sb"
                    android:layout_width="@dimen/t0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shuba"
                    android:textSize="@dimen/t20"
                    android:gravity="center"
                    android:paddingTop="@dimen/t10"
                    android:paddingBottom="@dimen/t10"/>
                <TextView
                    android:id="@+id/tv_sd"
                    android:layout_width="@dimen/t0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shudan"
                    android:textSize="@dimen/t20"
                    android:gravity="center"
                    android:paddingTop="@dimen/t10"
                    android:paddingBottom="@dimen/t10"/>
                <TextView
                    android:layout_width="@dimen/t0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/t20"
                    android:gravity="center"
                    android:paddingTop="@dimen/t10"
                    android:paddingBottom="@dimen/t10"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game"
                android:textSize="@dimen/t18"
                android:layout_marginLeft="@dimen/t8"
                android:textColor="@color/text_color"
                android:layout_marginTop="@dimen/t12"
                android:layout_marginBottom="@dimen/t4"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/t.5"
                android:background="@color/split_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
               <!-- <TextView
                    android:id="@+id/tv_game1"
                    android:layout_width="@dimen/t0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/game_1"
                    android:textSize="@dimen/t20"
                    android:gravity="center"
                    android:paddingTop="@dimen/t10"
                    android:paddingBottom="@dimen/t10"/>-->
                <TextView
                    android:id="@+id/tv_game2"
                    android:layout_width="@dimen/t0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/game_2"
                    android:textSize="@dimen/t20"
                    android:gravity="center"
                    android:paddingTop="@dimen/t10"
                    android:paddingBottom="@dimen/t10"/>
                <TextView
                    android:layout_width="@dimen/t0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/t20"
                    android:gravity="center"
                    android:paddingTop="@dimen/t10"
                    android:paddingBottom="@dimen/t10"/>
                <TextView
                    android:layout_width="@dimen/t0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/t20"
                    android:gravity="center"
                    android:paddingTop="@dimen/t10"
                    android:paddingBottom="@dimen/t10"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/t12"
                android:layout_marginBottom="@dimen/t4">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommend"
                    android:textSize="@dimen/t18"
                    android:layout_marginLeft="@dimen/t8"
                    android:textColor="@color/text_color"
                    />
                <TextView
                    android:id="@+id/tv_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh"
                    android:textSize="@dimen/t18"
                    android:textColor="@color/text_color_1"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/t8"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/t.5"
                android:background="@color/split_color"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_tj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/t10"
                android:layout_marginLeft="@dimen/t10"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>