<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ImageView
        android:id="@+id/iv_exit"
        android:layout_width="@dimen/t30"
        android:layout_height="@dimen/t30"
        android:scaleType="fitXY"
        android:src="@mipmap/exit"
        android:layout_marginTop="@dimen/t8"
        android:layout_marginRight="@dimen/t8"
        android:layout_alignParentRight="true"/>
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            android:layout_margin="@dimen/t24"/>
        <EditText
            android:id="@+id/edt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:layout_marginTop="@dimen/t24"
            android:layout_marginLeft="@dimen/t24"
            android:layout_marginRight="@dimen/t24"
            android:textSize="@dimen/t18"
            android:singleLine="true"
            android:maxLength="30"
            android:background="@null"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:digits="@string/digits"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/t.5"
            android:background="@color/split_color"
            android:layout_marginLeft="@dimen/t24"
            android:layout_marginRight="@dimen/t24"/>
        <EditText
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/t34"
            android:layout_marginLeft="@dimen/t24"
            android:layout_marginRight="@dimen/t24"
            android:textSize="@dimen/t18"
            android:singleLine="true"
            android:maxLength="10"
            android:background="@null"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:digits="@string/digits"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/t.5"
            android:background="@color/split_color"
            android:layout_marginLeft="@dimen/t24"
            android:layout_marginRight="@dimen/t24"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/t50"
            android:layout_marginLeft="@dimen/t24"
            android:layout_marginRight="@dimen/t24"
            android:layout_marginBottom="@dimen/t30"
            android:text="@string/login"
            android:textSize="@dimen/t18"
            android:textColor="@color/white"
            android:background="@color/grass"/>
    </LinearLayout>
    <View
        android:id="@+id/v_split"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ll"
        android:layout_width="@dimen/t.1"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/ll"
        android:textSize="@dimen/t16"
        android:textColor="@color/link"
        android:layout_toLeftOf="@+id/v_split"
        android:layout_marginRight="@dimen/t24"/>
    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget"
        android:layout_below="@+id/ll"
        android:textSize="@dimen/t16"
        android:textColor="@color/link"
        android:layout_toRightOf="@+id/v_split"
        android:layout_marginLeft="@dimen/t24"/>
</RelativeLayout>