<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ntu.wg.cq.ibook.custom.TopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ntu.wg.cq.ibook.custom.InputView
        android:id="@+id/input_book"
        android:layout_below="@+id/top_bar"
        android:layout_marginLeft="@dimen/t16"
        android:layout_marginRight="@dimen/t16"
        android:layout_marginTop="@dimen/t50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ntu.wg.cq.ibook.custom.InputView
        android:id="@+id/input_author"
        android:layout_below="@+id/input_book"
        android:layout_marginLeft="@dimen/t16"
        android:layout_marginRight="@dimen/t16"
        android:layout_marginTop="@dimen/t50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/t18"
        android:layout_below="@+id/input_author"
        android:textColor="@color/text_color_2"
        android:text="@string/tips"/>
    <TextView
        android:id="@+id/tv_add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/add_book"
        android:textSize="@dimen/t18"
        android:padding="@dimen/t8"
        android:background="@color/pop_color"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/post_ok"
        android:gravity="center"
        android:textSize="@dimen/t30"
        android:textColor="@color/text_color_1"/>
</RelativeLayout>