<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar"
        android:orientation="horizontal"
        android:background="@color/bottom_background">
        <EditText
            android:id="@+id/edt_key"
            android:layout_width="@dimen/t0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/t18"
            android:textColor="@color/white"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:paddingLeft="@dimen/t8"
            android:layout_marginTop="@dimen/t4"
            android:layout_marginBottom="@dimen/t4"
            android:layout_marginLeft="@dimen/t8"
            android:background="@drawable/image_no_checked"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:singleLine="true"
            android:maxLength="10"
            />
        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="@dimen/t18"
            android:padding="@dimen/t4"
            android:layout_marginTop="@dimen/t4"
            android:layout_marginLeft="@dimen/t8"
            android:layout_marginRight="@dimen/t8"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_add_book"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_find"
        android:gravity="center"
        android:textSize="@dimen/t16"
        android:textColor="@color/gray"
        android:paddingTop="@dimen/t10"
        android:paddingBottom="@dimen/t10"/>
    <include layout="@layout/recyclerview"/>
</LinearLayout>