<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/sv"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:background="@mipmap/ba_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/t140">
                <ImageView
                    android:id="@+id/head_pic"
                    android:layout_width="@dimen/t70"
                    android:layout_height="@dimen/t50"
                    android:src="@mipmap/book"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"/>
                <TextView
                    android:id="@+id/tv_mail"
                    android:visibility="gone"
                    android:textColor="@color/text_color_1"
                    android:textSize="@dimen/t16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/head_pic"
                    android:layout_marginTop="@dimen/t12"/>
                <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                    android:id="@+id/btn_to_login"
                    android:layout_below="@+id/head_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/t12"
                    android:textSize="@dimen/t16"
                    android:padding="@dimen/t4"
                    app:qmui_borderColor="@color/transparency"
                    android:textColor="@color/text_color_1"
                    android:text="@string/to_login"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/t60"/>
            <TextView
                android:id="@+id/tv_add_book"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/t8"
                android:background="@color/setting_back"
                android:layout_marginTop="@dimen/t16"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/t18"
                android:text="@string/add_book"/>

            <TextView
                android:id="@+id/tv_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/t16"
                android:padding="@dimen/t8"
                android:background="@color/setting_back"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/t18"
                android:text="@string/clear_cache"/>

            <TextView
                android:id="@+id/tv_change_password"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/t8"
                android:background="@color/setting_back"
                android:layout_marginTop="@dimen/t16"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/t18"
                android:text="@string/change_password"/>

            <TextView
                android:id="@+id/tv_logout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/t8"
                android:background="@color/setting_back"
                android:layout_marginTop="@dimen/t16"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/t18"
                android:text="@string/logout"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>